# search-relevance

./: 0-eda.ipynb  1-text-search.ipynb  2-vector-search.ipynb  2.1-vector-search-multi.ipynb  3-hybrid.ipynb  4-recip-rank-fusion.ipynb  README.md  pyproject.toml  query_functions.py
blog-posts/: post1.md  post2.md  post3.md  post4.md  post5.md
notebooks/: 1-text-search.ipynb  3-hybrid.ipynb  5-finetune.ipynb  6-finetune-vector-rrf.ipynb  7-finetine-evaluation.ipynb  query_functions.py
